# project-seer

./: .gitignore
DataCenterMap-Scraper/: .env.example  .gitignore  README.md  debug_delaware.py  debug_newark.py  docker-compose.yml  newark_de_city.html  pyproject.toml  pytest.ini
DataCenterMap-Scraper/debug/: debug_delaware.py  debug_newark.py  delaware_state.html  wilmington_city.html
DataCenterMap-Scraper/more.data/: CATF_CCUS_Database.xlsx  Ethanol Facilities (EPA Flight - emissions included) - Sheet1.csv  Ethanol Plants_20250824_024934_chunk0000.geojson  ethanol_plants_with_emissions.geojson
DataCenterMap-Scraper/src/: __init__.py  app.py
DataCenterMap-Scraper/src/core/: config.py  database.py  logging.py  models.py  repository.py
DataCenterMap-Scraper/src/dcm/: __init__.py  crawler.py  exporter.py  http_client.py  parsers.py  playwright_client.py
DataCenterMap-Scraper/tests/: conftest.py  test_cli.py  test_crawler.py  test_exporter.py  test_integration.py  test_parsers.py  test_repository.py
DataCenterMap-Scraper/tests/fixtures/: sample_html.py
map/: .env.example  .gitignore  README.md  add-centroid-column.sql  add-parcel-active-status.sql  fix-geometry-migration.sql  simple-land-parcels-schema.sql
map/debug/: check-coordinates.js
map/infra/: docker-compose.yml
map/ingest/: california-debug.html  debug-geothermal.js  energynet-debug.html  import_stanford_data.js  import_stanford_data.py  load-ccus.js  load-emitters.js  load-parcels.js  merge-ethanol.js  package-lock.json  package.json  robust-stanford-ingest.js  simple-geothermal-ingest.js  (+8 more)
(+52 files in other folders)
